--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "homepage" : "https://Abanoub1812.github.io/e-commerce",
+  "homepage": "https://Abanoub1812.github.io/e-commerce",
   "name": "e-commerce",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d disk",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
