--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Abanoub1812.github.io/e-commerce",
+  "homepage": "https://Abanoub1812.github.io/final-e-commerce",
   "name": "e-commerce",
   "private": true,
   "version": "0.0.0",
